# SicherPlan

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  README.md
.git-backup/: config  (+4 more)
backend/: .env.example  Dockerfile.stage  README.md  alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0001_ci_baseline.py  0002_core_tenant_backbone.py  0003_iam_foundation.py  0004_iam_auth_flows.py  0005_audit_foundation.py  0006_docs_backbone.py  0007_comm_backbone.py  0008_notice_backbone.py  0009_integration_backbone.py  0010_customer_master_backbone.py  0011_customer_history_and_exports.py  0012_customer_billing_profile.py  0013_customer_pricing_rules.py  0014_customer_invoice_configuration.py  0015_customer_collaboration_controls.py  0016_customer_portal_privacy_release.py  0017_recruiting_applicant_intake.py  (+48 more)
backend/app/: __init__.py  config.py  errors.py  hardening_manifest.py  health.py  logging_utils.py  main.py  message_catalog.py  middleware.py  rate_limit.py
backend/scripts/: bootstrap_system_admin.py  check_localization_readiness.py  check_operational_handover_assets.py  check_rollout_readiness_assets.py  reporting_query_probe.py  restore_validation.py  run_hardening_checks.py  run_production_cutover_dry_run.py  run_trial_migration_validation.py  run_uat_workflow_pack.py  seed_employee_catalogs.py  seed_go_live_configuration.py  seed_iam_catalog.py  seed_lookup_values.py  verify_assistant_field_dictionary.py  verify_assistant_platform_terms.py
backend/sicherplan_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+1228 files in other folders)
