[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sicherplan-backend"
version = "0.1.0"
description = "SicherPlan FastAPI backend workspace"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14",
    "fastapi>=0.115",
    "openai>=1.99.0",
    "pydantic>=2.10",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*", "tests*", "scripts*"]

[tool.setuptools.package-data]
"app.modules.assistant.generated" = ["field_lookup_corpus.json"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
